crates/pampa/snapshots/error-corpus/text/030.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: error_output
---
[31mError:[0m [Q-2-5] Unclosed Emphasis
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mresources/error-corpus/030.qmd:1:19[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [36m_[0m[38;5;249mU[0m[38;5;249mn[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249ms[0m[38;5;249me[0m[38;5;249md[0m[38;5;249m [0m[38;5;249me[0m[38;5;249mm[0m[38;5;249mp[0m[38;5;249mh[0m[38;5;249ma[0m[38;5;249ms[0m[38;5;249mi[0m[38;5;249ms[0m
 [38;5;240m  │[0m [36m┬[0m                 [31m┬[0m  
 [38;5;240m  │[0m [36m╰[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m This is the opening delimiter for the emphasis
 [38;5;240m  │[0m                   [31m│[0m  
 [38;5;240m  │[0m                   [31m╰[0m[31m─[0m[31m─[0m I reached the end of the block before finding a closing '_' for the emphasis.
[38;5;246m───╯[0m
