crates/pampa/snapshots/error-corpus/text/035.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: error_output
---
[31mError:[0m [Q-2-19] Unclosed Editorial Insert
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mresources/error-corpus/035.qmd:1:29[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [36m[[0m[36m+[0m[36m+[0m[38;5;249mU[0m[38;5;249mn[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249mo[0m[38;5;249ms[0m[38;5;249me[0m[38;5;249md[0m[38;5;249m [0m[38;5;249me[0m[38;5;249md[0m[38;5;249mi[0m[38;5;249mt[0m[38;5;249mo[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249ms[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249mt[0m
 [38;5;240m  │[0m [36m─[0m[36m┬[0m[36m─[0m                         [31m┬[0m  
 [38;5;240m  │[0m  [36m╰[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m[36m─[0m This is the opening '[++' mark
 [38;5;240m  │[0m                             [31m│[0m  
 [38;5;240m  │[0m                             [31m╰[0m[31m─[0m[31m─[0m I reached the end of the block before finding a closing ']' for the editorial insert.
[38;5;246m───╯[0m
